[metadata]
description_file = README.md

[flake8]
select =
    E501
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 80
import-order-style = pycharm
application-import-names = indra
